Updated meta tags and SEO for Nimit Generates

--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Official site of Nimit Generates – Explore and download smart Python projects like Jarvis, Spyder, and SpyderRobot." />
+
+  <!-- SEO Meta Tags -->
+  <meta name="title" content="Nimit Generates | Fun Tech for Students">
+  <meta name="description" content="Official site of Nimit Generates – Explore and download smart Python projects like Jarvis, Spyder, and SpyderRobot for student coders.">
+  <meta name="keywords" content="Nimit Generates, Jarvis AI, Spyder, SpyderRobot, Python Projects, Teen Coding, Student Robotics, AI Assistant, Arduino Robot">
+  <meta name="author" content="Nimit">
+  <meta name="robots" content="index, follow">
+
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Nimit Generates | Fun Tech for Students">
+  <meta property="og:description" content="Smart projects like Jarvis, Spyder, and SpyderRobot designed for school students. Fun meets code!">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://nimitgenerates.org">
+  <meta property="og:image" content="https://nimitgenerates.org/assets/preview.png"> <!-- Replace this with your actual image path -->
+
   <title>Nimit Generates | Fun Tech for Students</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Fredoka+One&display=swap" rel="stylesheet">
+
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
