Added Squirrel smart assistant card to index

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- SEO Meta Tags -->
   <meta name="title" content="Nimit Generates | Fun Tech for Students">
   <meta name="description" content="Official site of Nimit Generates – Explore and download smart Python projects like Jarvis, Spyder, and SpyderRobot for student coders.">
-  <meta name="keywords" content="Nimit Generates, Jarvis AI, Spyder, SpyderRobot, Python Projects, Teen Coding, Student Robotics, AI Assistant, Arduino Robot">
+  <meta name="keywords" content="Nimit Generates, Jarvis AI, Spyder, SpyderRobot, Squirrel Calculator, Python Projects, Teen Coding, Student Robotics, AI Assistant, Arduino Robot">
   <meta name="author" content="Nimit">
   <meta name="robots" content="index, follow">
 
@@ -16,7 +16,7 @@
   <meta property="og:description" content="Smart projects like Jarvis, Spyder, and SpyderRobot designed for school students. Fun meets code!">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://nimitgenerates.org">
-  <meta property="og:image" content="https://nimitgenerates.org/assets/preview.png"> <!-- Replace this with your actual image path -->
+  <meta property="og:image" content="https://nimitgenerates.org/assets/preview.png">
 
   <title>Nimit Generates | Fun Tech for Students</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Fredoka+One&display=swap" rel="stylesheet">
@@ -195,6 +195,11 @@
     <div class="card">
       <h3>SpyderRobot</h3>
       <p>Coming soon: A Python-powered 4-legged spider robot for Arduino and students!</p>
+      <button disabled>Coming Soon</button>
+    </div>
+    <div class="card">
+      <h3>Squirrel</h3>
+      <p>Coming soon: Squirrel is a smart calculator assistant that solves math with brain-like precision.</p>
       <button disabled>Coming Soon</button>
     </div>
   </section>
