Updated Squirrel project section with download button

--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
     </div>
     <div class="card">
       <h3>Squirrel</h3>
-      <p>Coming soon: Squirrel is a smart calculator assistant that solves math with brain-like precision.</p>
-      <button disabled>Coming Soon</button>
+      <p>Squirrel is a smart calculator assistant that solves math with brain-like precision.</p>
+      <button onclick="window.open('https://github.com/Nimitg2012/Squirrel', '_blank')">Download Squirrel</button>
     </div>
   </section>
 
