--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
     </div>
     <div class="card">
       <h3>SpyderRobot</h3>
-      <p>Coming soon: A Python-powered 4-legged spider robot for Arduino and students!</p>
-      <button disabled>Coming Soon</button>
+      <p>A Python-powered 4-legged spider robot for Arduino and students!</p>
+      <button onclick="window.open('https://github.com/Nimitg2012/Spyderr-Robot', '_blank')">Download SpyderRobot</button>
     </div>
     <div class="card">
       <h3>Squirrel</h3>
