Enabled download buttons for Squirrel and SpyderRobot

--- a/index.html
+++ b/index.html
@@ -193,13 +193,18 @@
       <button onclick="window.open('https://github.com/Nimitg2012/spyderr', '_blank')">Download Spyder</button>
     </div>
     <div class="card">
+      <h3>Pixy</h3>
+      <p>Pixy is your smart, voice-activated assistant that helps you take notes, manage tasks, and stay productive — all with just a few words. 🧠🎙️</p>
+      <button onclick="window.open('https://github.com/Nimitg2012/Pixy', '_blank')">Download Pixy</button>
+    </div>
+    <div class="card">
       <h3>SpyderRobot</h3>
-      <p>A Python-powered 4-legged spider robot for Arduino and students!</p>
+      <p>A Python-powered 4-legged spider robot for Arduino and student makers. 🕷️</p>
       <button onclick="window.open('https://github.com/Nimitg2012/Spyderr-Robot', '_blank')">Download SpyderRobot</button>
     </div>
     <div class="card">
       <h3>Squirrel</h3>
-      <p>Squirrel is a smart calculator assistant that solves math with brain-like precision.</p>
+      <p>Squirrel is a smart calculator assistant that solves math with brain-like precision. 🧮</p>
       <button onclick="window.open('https://github.com/Nimitg2012/Squirrel', '_blank')">Download Squirrel</button>
     </div>
   </section>
