Added Scriptly AI assistant to project list

--- a/index.html
+++ b/index.html
@@ -207,6 +207,11 @@
       <p>Squirrel is a smart calculator assistant that solves math with brain-like precision. 🧮</p>
       <button onclick="window.open('https://github.com/Nimitg2012/Squirrel', '_blank')">Download Squirrel</button>
     </div>
+    <div class="card">
+      <h3>Scriptly</h3>
+      <p>Scriptly is a voice and text-powered coding assistant that writes Python for you. Just speak and code! 🐍🗣️</p>
+      <button onclick="window.open('https://github.com/Nimitg2012/Scriptly', '_blank')">Download Scriptly</button>
+    </div>
   </section>
 
   <section class="features">
@@ -243,4 +248,3 @@
   </footer>
 </body>
 </html>
-<!-- redeploy -->
