Added JS4 project card

--- a/index.html
+++ b/index.html
@@ -212,6 +212,12 @@
       <p>Scriptly is a voice and text-powered coding assistant that writes Python for you. Just speak and code! 🐍🗣️</p>
       <button onclick="window.open('https://github.com/Nimitg2012/Scriptly', '_blank')">Download Scriptly</button>
     </div>
+    <!-- New JS4 Card -->
+    <div class="card">
+      <h3>JS4</h3>
+      <p>JS4 is the upgraded, faster version of Squirrel — an AI-powered calculator that solves complex problems instantly. ⚡🧮</p>
+      <button onclick="window.open('https://github.com/Nimitg2012/JS4', '_blank')">Download JS4</button>
+    </div>
   </section>
 
   <section class="features">
