Added favicon correctly

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nimit Generates</title>
 
+  <!-- Favicon + App Icons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="shortcut icon" href="favicon.ico">
+
   <!-- FONT -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
@@ -294,7 +301,7 @@
       <button onclick="window.open('https://github.com/Nimitg2012/JARVIS')">Download</button>
     </div>
 
-    <div class="card">
+    <div class="card">  
       <h3>Spyder</h3>
       <p>A Spider-themed adaptive assistant that learns your style.</p>
       <button onclick="window.open('https://github.com/Nimitg2012/spyderr')">Download</button>
